[tool.poetry]
name = "harvey_pusher"
version = "0.0.1"
description = "Automated posting tool to publish predictions from models"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "harvey_pusher"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"